--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nunjucks": "^3.2.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.2",
+    "morgan": "^1.10.0"
   }
 }
