--- a/package.json
+++ b/package.json
@@ -6,19 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "chokidar": "^3.5.3",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "nunjucks": "^3.2.3",
-    "pug": "^3.0.2",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-errors": "~1.6.3",
     "mongoose": "^7.5.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nunjucks": "^3.2.3",
+    "pug": "^3.0.2",
+    "socket.io": "^4.7.2"
   }
 }
