--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "chokidar": "^3.5.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
